example-website/example-website-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: example-website
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
