example-website/example-website-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: example-website
spec:
  ingressClassName: nginx
  rules:
    - host: example-website.k.rm-rfstar.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
